--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "BigstreamConsole",
   "dependencies": {
     "electron": "^1.7.4",
+    "electron-context-menu": "^0.9.1",
     "electron-store": "^1.2.0",
     "electron-window-manager": "^1.0.6",
     "express": "^4.15.3",
